# SuperCurves

./: LICENSE  README.md  colors.json  curves.py  main.py  pyproject.toml
SuperStyle/: superman.py
src/super_curves/: curves.py
src/super_curves/SuperStyle/: ironman.py  main_style.py  superman.py
src/super_curves/data/: colors.json
tests/: main.py
