[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"


[project]
name = "super_curves_PhantHive"
version = "0.0.1"
authors = [
  { name="PhantHive", email="zakaria.chaouki@ipsa.fr" },
]
description = "Make your curves SPICY"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/PhantHive/SuperCurves"
"Bug Tracker" = "https://github.com/PhantHive/SuperCurves/issues"